<resources>
    <string name="app_name">MyKominfo</string>
    <string name="anda_berhasil_login" />
    <string name="test_button" />
    <string name="login_telah_berhasil">Login telah berhasil</string>
    <string name="ubah_warna_button">Ubah Warna Button</string>
    <string name="username">Username</string>
    <string name="text_box_username">Text Box Username</string>
    <string name="masukkan_username_anda">Masukkan Username Anda</string>
    <string name="password">Password</string>
    <string name="masukkan_password_anda">Masukkan Password Anda</string>
    <string name="login">Login</string>
    <string name="belum_mempunyai_akun">Belum Mempunyai Akun?</string>
    <string name="daftar_disini">Daftar Disini</string>
    <string name="todo1">Todo1</string>
    <string name="menu_2">Menu 2</string>
    <string name="menu_1">Menu 1</string>
    <string name="menu_3">Menu 3</string>
    <string name="menu1">Menu1</string>
    <string name="menu2">Menu2</string>
    <string name="menu3">Menu3</string>
    <string name="halaman_menu">Halaman Menu</string>
    <string name="ingat_saya">Ingat Saya</string>
    <string name="selamat_datang_di_p2p_landing_untuk_masa_depan_umkm_kita">Selamat Datang di P2P Landing untuk Masa Depan UMKM kita</string>
    <string name="selamat_datang_di_pusat_informasi_kominfo">Selamat Datang di Pusat Informasi Kominfo</string>
    <string name="register_account">REGISTER ACCOUNT</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="konfirmasi_password_anda">Konfirmasi Password Anda</string>
    <string name="register">REGISTER</string>
    <string name="by_signing_in_i_am_agreeing_the_term_and_privacy_policy">By signing in I am agreeing the Term and privacy policy</string>
    <string name="email">Email</string>
    <string name="masukkan_email_anda">Masukkan Email Anda</string>
    <string name="sudah_punya_akun">Sudah Punya Akun?</string>
    <string name="masuk">Masuk</string>
    <string name="password_visibility_off">password visibility off</string>
    <string name="tampilkan_password">Tampilkan Password</string>
    <string name="search">Search</string>
    <string name="halo">Halo,</string>
    <string name="log_out">Log Out</string>
    <string name="cari">Cari</string>
    <string name="galeri_informasi">Galeri Informasi</string>
    <string name="kelola_data_pegawai">Kelola Data Pegawai</string>
    <string name="lihat_data_pegawai">Lihat Data Pegawai</string>
    <string name="input_data_pegawai">Input Data Pegawai</string>
    <string name="informasi_aplikasi">Informasi Aplikasi</string>
    <string name="nama_pegawai">Nama Pegawai</string>
    <string name="umur">Umur</string>
    <string name="nama">Nama:</string>
    <string name="jabatan">Jabatan:</string>
    <string name="umur2">Umur:</string>
    <string name="tanggal_lahir">Tanggal Lahir:</string>
    <string name="jenis_kelamin">Jenis Kelamin:</string>
    <string name="alamat">Alamat:</string>
    <string name="gaji">Gaji:</string>
    <string name="durasi_kerja">Durasi Kerja:</string>
    <string name="nama_pegawai2">Nama Pegawai</string>
    <string name="pegawai_photoprofile">Pegawai PhotoProfile</string>
    <string name="edit_data">Edit Data</string>
    <string name="aplikasi_mykominfo_adalah_aplikasi_yang_berfungsi_sebagai_manajemen_data_kepegawaian_pegawai_kemkominfo_admin_mykominfo_nantinya_dapat_menambahkan_data_pegawai_yang_baru_mengedit_data_pegawai_hingga_admin_dapat_menghapus_data_pegawai_kemkominfo">Aplikasi MyKominfo adalah Aplikasi yang berfungsi sebagai Manajemen Data Kepegawaian Pegawai KemKominfo. Admin MyKominfo nantinya dapat menambahkan data Pegawai yang Baru, Mengedit Data Pegawai, hingga Admin dapat Menghapus Data Pegawai KemKominfo.</string>
</resources>