<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_marginTop="-26dp"
    android:layout_marginStart="-26dp"
    android:layout_marginEnd="-26dp"
    android:layout_marginBottom="-70dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_screen"
    android:orientation="vertical"
    tools:context=".Login">

<ImageView
        android:id="@+id/imageView2"
        android:layout_width="165dp"
        android:layout_height="149dp"
        app:srcCompat="@drawable/logo_kemkominfo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/todo1" />

    <LinearLayout
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:fontFamily="cursive"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/old_blue"
            android:layout_marginStart="0dp"
            android:text="@string/selamat_datang_di_pusat_informasi_kominfo" />

    </LinearLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:paddingStart="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/old_blue"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rounded_edittext_bg"
        android:paddingStart="20dp"
        android:hint="@string/masukkan_email_anda"
        android:textColorHint="@color/black_shadow"
        android:textColor="@color/black"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="8dp"
        tools:ignore="RtlSymmetry"
        android:autofillHints=""
        android:paddingEnd="20dp"
        android:inputType="textEmailAddress"
        android:drawableEnd="@drawable/ic_baseline_email_24"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:text="@string/password"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/old_blue"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rounded_edittext_bg"
        android:hint="@string/masukkan_password_anda"
        android:textColorHint="@color/black_shadow"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/black"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:drawableEnd="@drawable/ic_baseline_lock_open_24"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/password_visibility_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/editText2"
        android:layout_alignEnd="@id/editText2"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:paddingStart="70dp"
        android:text="@string/tampilkan_password"
        android:textColor="@color/old_blue"
        android:textStyle="bold"
        android:textSize="12sp"
        tools:ignore="ObsoleteLayoutParam,RtlSymmetry" />

    <CheckBox
        android:id="@+id/rememberCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingat_saya"
        android:layout_marginStart="52dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/old_blue"/>
    <!-- Login Button -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="52dp"
        android:backgroundTint="@color/old_blue"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="389dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="52dp"
            android:text="@string/belum_mempunyai_akun"
            android:textColor="@color/black"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="92dp"
            android:layout_marginTop="0dp"
            android:text="@string/daftar_disini"
            android:textColor="@color/old_blue" />

    </LinearLayout>

</LinearLayout>
